Fixed dialogue box styling. Fixed sticky content z-index value calc. Removed button padding

--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@ dialog {
 }
 
 .dialog-box {
-  margin-top: 20%;
+  margin-top: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -200,8 +200,14 @@ dialog {
   border-radius: 8px;
   box-shadow: 2px 3px 5px #171a2067;
   width: 50%;
-  min-height:25%;
+  max-width: 750px;
+  min-height: 25%;
   gap: 0px;
+}
+
+.dialog-box > .x-icon-container {
+  background-color: transparent;
+  border-radius: 8px;
 }
 
 .dialog-box > h2 {
@@ -409,7 +415,7 @@ header nav button {
   position: sticky;
   top:0;
   background-color: #FFF;
-  height: 100%;
+  height: 36px;
   justify-content: flex-end;
   align-items: center;
   padding-right: 20px;
