--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,5 @@ button {
   font-family: inherit;
   background: none;
   border: none;
+  padding: 0px;
 }
